// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API endpoints Issue create 1`] = `
{
  "comments": [
    {
      "body": "Comment body",
      "id": 1,
      "issue_id": 1,
    },
  ],
  "id": 1,
  "number": 1,
  "repo": [
    {
      "description": "Repo 1 description",
      "id": 1,
      "is_public": true,
      "latest_num": 1,
      "name": "Repo 1",
      "org_id": 1,
      "slug": "repo1",
    },
  ],
  "title": "Issue 1",
}
`;

exports[`API endpoints Org create 1`] = `
{
  "description": "Org NEW description",
  "id": 5,
  "name": "Org NEW",
  "nameAndDesc": "Org NEW: Org NEW description",
  "slug": "orgNEW",
  "summary": "Org NEWOrg NEW description",
}
`;

exports[`API endpoints Org custom create 1`] = `
{
  "description": "Org custom NEW description",
  "id": 6,
  "name": "Org Custom NEW",
  "nameAndDesc": "Org Custom NEW: Org custom NEW description",
  "slug": "orgCustomNEW",
  "summary": "Org Custom NEWOrg custom NEW description",
}
`;

exports[`API endpoints Org custom endpoint - fetch action 1`] = `
{
  "name": "Fetch me org 1",
  "repoSlug": "repo1",
}
`;

exports[`API endpoints Org custom one endpoint - action with query 1`] = `
{
  "inputName": "Org 1",
  "inputOrgId": 1,
  "orgById": [
    {
      "id": 1,
      "name": "Org 1",
    },
  ],
  "orgByName": [
    {
      "id": 1,
      "name": "Org 1",
    },
  ],
}
`;

exports[`API endpoints Org custom update 1`] = `
{
  "description": "Org custom 2A description",
  "id": 2,
  "name": "Org custom 2A",
  "nameAndDesc": "Org custom 2A: Org custom 2A description",
  "slug": "org2",
  "summary": "Org custom 2AOrg custom 2A description",
}
`;

exports[`API endpoints Org get 1`] = `
{
  "description": "Org 1 description",
  "id": 1,
  "name": "Org 1",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "org1",
  "summary": "Org 1Org 1 description",
}
`;

exports[`API endpoints Org list 1`] = `
{
  "data": [
    {
      "description": "Org 1 description",
      "id": 1,
      "name": "Org 1",
      "nameAndDesc": "Org 1: Org 1 description",
      "slug": "org1",
      "summary": "Org 1Org 1 description",
    },
    {
      "description": "Org 2 description",
      "id": 2,
      "name": "Org 2",
      "nameAndDesc": "Org 2: Org 2 description",
      "slug": "org2",
      "summary": "Org 2Org 2 description",
    },
    {
      "description": "Org 3 description",
      "id": 3,
      "name": "Org 3",
      "nameAndDesc": "Org 3: Org 3 description",
      "slug": "org3",
      "summary": "Org 3Org 3 description",
    },
    {
      "description": "Org 4 description",
      "id": 4,
      "name": "Org 4",
      "nameAndDesc": "Org 4: Org 4 description",
      "slug": "org4",
      "summary": "Org 4Org 4 description",
    },
  ],
  "page": 1,
  "pageSize": 20,
  "totalCount": 4,
  "totalPages": 1,
}
`;

exports[`API endpoints Org list with paging 1`] = `
{
  "data": [
    {
      "description": "Org 3 description",
      "id": 3,
      "name": "Org 3",
      "nameAndDesc": "Org 3: Org 3 description",
      "slug": "org3",
      "summary": "Org 3Org 3 description",
    },
    {
      "description": "Org 4 description",
      "id": 4,
      "name": "Org 4",
      "nameAndDesc": "Org 4: Org 4 description",
      "slug": "org4",
      "summary": "Org 4Org 4 description",
    },
  ],
  "page": 2,
  "pageSize": 2,
  "totalCount": 4,
  "totalPages": 2,
}
`;

exports[`API endpoints Org update 1`] = `
{
  "description": "Org 2A description",
  "id": 2,
  "name": "Org 2A",
  "nameAndDesc": "Org 2A: Org 2A description",
  "slug": "org2",
  "summary": "Org 2AOrg 2A description",
}
`;

exports[`API endpoints Repo create 1`] = `
{
  "description": "Description: Repo 6 description",
  "id": 6,
  "org_id": 1,
  "slug": "org_1-W5JU1e0Kj1Kv",
}
`;

exports[`API endpoints Repo get 1`] = `
{
  "description": "Repo 1 description",
  "id": 1,
  "org_id": 1,
  "slug": "repo1",
}
`;

exports[`API endpoints Repo list 1`] = `
{
  "data": [
    {
      "description": "Repo 1 description",
      "id": 1,
      "org_id": 1,
      "slug": "repo1",
    },
    {
      "description": "Repo 2 description",
      "id": 2,
      "org_id": 1,
      "slug": "repo2",
    },
    {
      "description": "Repo 3 description",
      "id": 3,
      "org_id": 1,
      "slug": "repo3",
    },
  ],
  "page": 1,
  "pageSize": 3,
  "totalCount": 3,
  "totalPages": 1,
}
`;

exports[`API endpoints Repo update 1`] = `
{
  "description": "Repo 2A description",
  "id": 2,
  "org_id": 1,
  "slug": "repo2",
}
`;
